--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:400,700&display=swap" rel="stylesheet">
-    <title>Daniel Barion</title>
+    <title>Sowmiya Selvam</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
